fix name overflow

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
 }
 .cart {
     background: rgba(255, 255, 255, 0.98);
+    max-height: 100vh;
     height: 100vh;
     width: 100vw;
     position: absolute;
